# dsa-learning-app

./: .gitignore  README.md  apply-solution-card-migration.js  apply-updated-at-migration.cjs  fix-updated-at-migration.sql  generate-icons.sh  index.html  migrate-work-sessions.sql  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: TXT_IMPORT_FORMAT.md
examples/: sample_problems.txt
migrations/: 003_card_images.sql  004_add_review_sessions.sql  PRODUCTION_MIGRATION_GUIDE.md  add_solution_card_support.sql  add_updated_at_to_problems.sql  production-migration-final.sql  production-migration-safe.sql  production-migration.sql  rollback-migration.sql  verify-production-schema.sql
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/src/: main.rs  main_simple.rs  models.rs  path_resolver.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/commands/: analytics.rs  audio.rs  card_images.rs  database.rs  debug.rs  images.rs  mod.rs  review_timer.rs  stats.rs  timer.rs  work_sessions.rs
src-tauri/src/commands/solution_card/: handlers.rs  mod.rs  queries.rs
src-tauri/src/database/: mod.rs  schema.rs
src/components/: AudioInputWatcher.tsx  BulkDeleteDialog.tsx  CardImageButton.tsx  CardImageGallery.tsx  CardImageModal.tsx  ConfirmationModal.tsx  DebugPanel.tsx  DeleteCardModal.tsx  DeleteProblemDialog.tsx  EnhancedMonacoEditor.tsx  EnhancedProblemDescriptionPanel.tsx  FallbackTextEditor.tsx  FocusModeShortcutHandler.tsx  FocusModeToggle.tsx  GlobalAudioPlayer.css  Header.tsx  (+24 more)
(+79 files in other folders)
